Examples/Engine/engine.h


//
//  Meta information API Calls
//

//
//		GetRevision                                 (http://rdf.bg/gkdoc/CP64/GetRevision.html)
//				char				** timeStamp						IN / OUT
//
//				int64_t				returns								OUT
//
//	Returns the revision number.
//	The timeStamp is generated by the SVN system used during development.
//
int64_t		DECL STDC	GetRevision(
									char				** timeStamp
								);


//
//		GetRevisionW                                (http://rdf.bg/gkdoc/CP64/GetRevisionW.html)
//				wchar_t				** timeStamp						IN / OUT
//
//				int64_t				returns								OUT
//
//	Returns the revision number.
//	The timeStamp is generated by the SVN system used during development.
//
int64_t		DECL STDC	GetRevisionW(
									wchar_t				** timeStamp
								);


//
//		GetProtection                               (http://rdf.bg/gkdoc/CP64/GetProtection.html)
//				int64_t				returns								OUT
//
//	This call is required to be called to enable the DLL to work if protection is active.
//
//	Returns the number of days (incl. this one) that this version is still active or 0 if no protection is embedded.
//	In case no days are left and protection is active this call will return -1.
//
int64_t		DECL STDC	GetProtection(
								);


//
//		GetEnvironment                              (http://rdf.bg/gkdoc/CP64/GetEnvironment.html)
//				char				** environmentVariables				IN / OUT
//				char				** developmentVariables				IN / OUT
//
//				int64_t				returns								OUT
//
//	Returns the revision number similar to the call GetRevision.
//	The environment variables will show known environment variables
//	and if they are set, for example environment variables ABC known
//	and unset and DEF as well as GHI known and set:
//		environmentVariables = "ABC:F;DEF:T;GHI:T"
//	Development variables are depending on the build environment
//	As an example in windows systems where Visual Studio is used:
//		developmentVariables = "...."
//
int64_t		DECL STDC	GetEnvironment(
									char				** environmentVariables,
									char				** developmentVariables
								);


//
//		GetEnvironmentW                             (http://rdf.bg/gkdoc/CP64/GetEnvironmentW.html)
//				wchar_t				** environmentVariables				IN / OUT
//				wchar_t				** developmentVariables				IN / OUT
//
//				int64_t				returns								OUT
//
//	Returns the revision number similar to the call GetRevision[W].
//	The environment variables will show known environment variables
//	and if they are set, for example environment variables ABC known
//	and unset and DEF as well as GHI known and set:
//		environmentVariables = "ABC:F;DEF:T;GHI:T"
//	Development variables are depending on the build environment
//	As an example in windows systems where Visual Studio is used:
//		developmentVariables = "...."
//
int64_t		DECL STDC	GetEnvironmentW(
									wchar_t				** environmentVariables,
									wchar_t				** developmentVariables
								);


//
//		SetAssertionFile                            (http://rdf.bg/gkdoc/CP64/SetAssertionFile.html)
//				const char			* fileName							IN
//
//				void				returns
//
//	This function sets the file location where internal assertions should be written to.
//	If the file name is not set (default) many internal control procedures are not executed
//	and the code will be faster.
//
void		DECL STDC	SetAssertionFile(
									const char			* fileName
								);


//
//		SetAssertionFileW                           (http://rdf.bg/gkdoc/CP64/SetAssertionFileW.html)
//				const wchar_t		* fileName							IN
//
//				void				returns
//
//	This function sets the file location where internal assertions should be written to.
//	If the file name is not set (default) many internal control procedures are not executed
//	and the code will be faster.
//
void		DECL STDC	SetAssertionFileW(
									const wchar_t		* fileName
								);


//
//		GetAssertionFile                            (http://rdf.bg/gkdoc/CP64/GetAssertionFile.html)
//				char				** fileName							IN / OUT
//
//				void				returns
//
//	This function gets the file location as stored/set internally where internal assertions should be written to.
//	It works independent if the file location is set through SetAssertionFile() or SetAssertionFileW().
//
void		DECL STDC	GetAssertionFile(
									char				** fileName
								);


//
//		GetAssertionFileW                           (http://rdf.bg/gkdoc/CP64/GetAssertionFileW.html)
//				wchar_t				** fileName							IN / OUT
//
//				void				returns
//
//	This function gets the file location as stored/set internally where internal assertions should be written to.
//	It works independent if the file location is set through SetAssertionFile() or SetAssertionFileW().
//
void		DECL STDC	GetAssertionFileW(
									wchar_t				** fileName
								);


//
//		SetCharacterSerialization                   (http://rdf.bg/gkdoc/CP64/SetCharacterSerialization.html)
//				int64_t				model								IN
//				int64_t				encoding							IN
//				int64_t				wcharBitSizeOverride				IN
//				bool				ascii								IN
//
//				int64_t				returns								OUT
//
//	This call defines how characters for names, strings will be serializaed and how
//	they are expected to be serialized. An exception are the Open / Import / Save calls,
//	these calls have a fixed way of serialization of path / file names.
//
//	If the encoding value is non-zero the following values are possible (if zero encoding is kept as defined)
//		 32 [default]	encoding ignored
//		 64				encoding Windows 1250
//		 65				encoding Windows 1251
//		 66				encoding Windows 1252
//		 67				encoding Windows 1253
//		 68				encoding Windows 1254
//		 69				encoding Windows 1255
//		 70				encoding Windows 1256
//		 71				encoding Windows 1257
//		 72				encoding Windows 1258
//		128				encoding ISO8859 1
//		129				encoding ISO8859 2
//		130				encoding ISO8859 3
//		131				encoding ISO8859 4
//		132				encoding ISO8859 5
//		133				encoding ISO8859 6
//		134				encoding ISO8859 7
//		135				encoding ISO8859 8
//		136				encoding ISO8859 9
//		137				encoding ISO8859 10
//		138				encoding ISO8859 11
//						encoding ISO8859 12 => does not exist
//		140				encoding ISO8859 13
//		141				encoding ISO8859 14
//		142				encoding ISO8859 15
//		143				encoding ISO8859 16
//		160				encoding MACINTOSH CENTRAL EUROPEAN
//		192				encoding SHIFT JIS X 213
//
//	The wcharBitSizeOverride value overrides the OS based size of wchar_t, the following values can be applied:
//		0			wcharBitSizeOverride is ignored, override is not changed
//		16			wchar_t interpreted as being 2 bytes wide (size of wchar_t in bits)
//		32			wchar_t interpreted as being 4 bytes wide (size of wchar_t in bits)
//		Any other value will reset the override and wchar_t will follow the OS based size of wchar_t
//	Note: this setting is independent from the model, this call can also be called without a model defined.
//
//	The ascii value defines
//		true [default]	8 bit serializatiom (size of char returned in bits)
//		false			16/32 bit serialization (depending on the operating system, i.e. sizeof of wchar_t returned in number of bits)
//	Note: this setting is model-dependent and requires a model present to have any effect.
//
//	The return value is the size of a single character in bits, i.e. 1 byte is 8 bits, the value for a wchar_t can be 16 or 32 depending on settings and operating system
//
int64_t		DECL STDC	SetCharacterSerialization(
									int64_t				model,
									int64_t				encoding,
									int64_t				wcharBitSizeOverride,
									bool				ascii
								);


//
//		GetCharacterSerialization                   (http://rdf.bg/gkdoc/CP64/GetCharacterSerialization.html)
//				int64_t				model								IN
//				int64_t				* encoding							IN / OUT
//				bool				* ascii								IN / OUT
//
//				int64_t				returns								OUT
//
//	This call retrieves the values as set by 
//
//	The returns the size of a single character in bits, i.e. 1 byte is 8 bits, this can be 8, 16 or 32 depending on settings and operating system
//
int64_t		DECL STDC	GetCharacterSerialization(
									int64_t				model,
									int64_t				* encoding,
									bool				* ascii
								);


//
//		SetModellingStyle                           (http://rdf.bg/gkdoc/CP64/SetModellingStyle.html)
//				int64_t				model								IN
//				int64_t				setting								IN
//				int64_t				mask								IN
//
//				void				returns
//
//	This call sets the modelling style.
//
void		DECL STDC	SetModellingStyle(
									int64_t				model,
									int64_t				setting,
									int64_t				mask
								);


//
//		GetModellingStyle                           (http://rdf.bg/gkdoc/CP64/GetModellingStyle.html)
//				int64_t				model								IN
//				int64_t				mask								IN
//
//				int64_t				returns								OUT
//
//	This call gets the modelling style.
//
int64_t		DECL STDC	GetModellingStyle(
									int64_t				model,
									int64_t				mask
								);


//
//		AbortModel                                  (http://rdf.bg/gkdoc/CP64/AbortModel.html)
//				int64_t				model								IN
//				int64_t				setting								IN
//
//				int64_t				returns								OUT
//
//	This function abort running processes for a model. It can be used when a task takes more time than
//	expected / available, or in case the requested results are not relevant anymore.
//
int64_t		DECL STDC	AbortModel(
									int64_t				model,
									int64_t				setting
								);


//
//		GetSessionMetaInfo                          (http://rdf.bg/gkdoc/CP64/GetSessionMetaInfo.html)
//				int64_t				* allocatedBlocks					IN / OUT
//				int64_t				* allocatedBytes					IN / OUT
//				int64_t				* nonUsedBlocks						IN / OUT
//				int64_t				* nonUsedBytes						IN / OUT
//
//				int64_t				returns								OUT
//
//	This function is meant for debugging purposes and return statistics during processing.
//	The return value represents the number of active models within the session (or zero if the model was not recognized).
//
int64_t		DECL STDC	GetSessionMetaInfo(
									int64_t				* allocatedBlocks,
									int64_t				* allocatedBytes,
									int64_t				* nonUsedBlocks,
									int64_t				* nonUsedBytes
								);


//
//		GetModelMetaInfo                            (http://rdf.bg/gkdoc/CP64/GetModelMetaInfo.html)
//				int64_t				model								IN
//				int64_t				* activeClasses						IN / OUT
//				int64_t				* removedClasses					IN / OUT
//				int64_t				* activeProperties					IN / OUT
//				int64_t				* removedProperties					IN / OUT
//				int64_t				* activeInstances					IN / OUT
//				int64_t				* removedInstances					IN / OUT
//				int64_t				* inactiveInstances					IN / OUT
//
//				int64_t				returns								OUT
//
//	This function is meant for debugging purposes and return statistics during processing.
//	The return value represents the number of active models within the session (or zero if the model was not recognized).
//
int64_t		DECL STDC	GetModelMetaInfo(
									int64_t				model,
									int64_t				* activeClasses,
									int64_t				* removedClasses,
									int64_t				* activeProperties,
									int64_t				* removedProperties,
									int64_t				* activeInstances,
									int64_t				* removedInstances,
									int64_t				* inactiveInstances
								);