IfcEngine.cs


		/// <summary>
		///		GetRevisionW                                (http://rdf.bg/gkdoc/CS64/GetRevisionW.html)
		///
		///	Returns the revision number.
		///	The timeStamp is generated by the SVN system used during development.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetRevisionW")]
		public static extern Int64 GetRevisionW(out IntPtr timeStamp);

		/// <summary>
		///		GetProtection                               (http://rdf.bg/gkdoc/CS64/GetProtection.html)
		///
		///	This call is required to be called to enable the DLL to work if protection is active.
		///
		///	Returns the number of days (incl. this one) that this version is still active or 0 if no protection is embedded.
		///	In case no days are left and protection is active this call will return -1.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetProtection")]
		public static extern Int64 GetProtection();

		/// <summary>
		///		GetEnvironment                              (http://rdf.bg/gkdoc/CS64/GetEnvironment.html)
		///
		///	Returns the revision number similar to the call GetRevision.
		///	The environment variables will show known environment variables
		///	and if they are set, for example environment variables ABC known
		///	and unset and DEF as well as GHI known and set:
		///		environmentVariables = "ABC:F;DEF:T;GHI:T"
		///	Development variables are depending on the build environment
		///	As an example in windows systems where Visual Studio is used:
		///		developmentVariables = "...."
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetEnvironment")]
		public static extern Int64 GetEnvironment(out IntPtr environmentVariables, out IntPtr developmentVariables);

		/// <summary>
		///		GetEnvironmentW                             (http://rdf.bg/gkdoc/CS64/GetEnvironmentW.html)
		///
		///	Returns the revision number similar to the call GetRevision[W].
		///	The environment variables will show known environment variables
		///	and if they are set, for example environment variables ABC known
		///	and unset and DEF as well as GHI known and set:
		///		environmentVariables = "ABC:F;DEF:T;GHI:T"
		///	Development variables are depending on the build environment
		///	As an example in windows systems where Visual Studio is used:
		///		developmentVariables = "...."
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetEnvironmentW")]
		public static extern Int64 GetEnvironmentW(out IntPtr environmentVariables, out IntPtr developmentVariables);

		/// <summary>
		///		SetAssertionFile                            (http://rdf.bg/gkdoc/CS64/SetAssertionFile.html)
		///
		///	This function sets the file location where internal assertions should be written to.
		///	If the file name is not set (default) many internal control procedures are not executed
		///	and the code will be faster.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetAssertionFile")]
		public static extern void SetAssertionFile(string fileName);

		[DllImport(IFCEngineDLL, EntryPoint = "SetAssertionFile")]
		public static extern void SetAssertionFile(byte[] fileName);

		/// <summary>
		///		SetAssertionFileW                           (http://rdf.bg/gkdoc/CS64/SetAssertionFileW.html)
		///
		///	This function sets the file location where internal assertions should be written to.
		///	If the file name is not set (default) many internal control procedures are not executed
		///	and the code will be faster.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetAssertionFileW")]
		public static extern void SetAssertionFileW(string fileName);

		[DllImport(IFCEngineDLL, EntryPoint = "SetAssertionFileW")]
		public static extern void SetAssertionFileW(byte[] fileName);

		/// <summary>
		///		GetAssertionFile                            (http://rdf.bg/gkdoc/CS64/GetAssertionFile.html)
		///
		///	This function gets the file location as stored/set internally where internal assertions should be written to.
		///	It works independent if the file location is set through SetAssertionFile() or SetAssertionFileW().
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetAssertionFile")]
		public static extern void GetAssertionFile(out IntPtr fileName);

		/// <summary>
		///		GetAssertionFileW                           (http://rdf.bg/gkdoc/CS64/GetAssertionFileW.html)
		///
		///	This function gets the file location as stored/set internally where internal assertions should be written to.
		///	It works independent if the file location is set through SetAssertionFile() or SetAssertionFileW().
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetAssertionFileW")]
		public static extern void GetAssertionFileW(out IntPtr fileName);

		/// <summary>
		///		SetCharacterSerialization                   (http://rdf.bg/gkdoc/CS64/SetCharacterSerialization.html)
		///
		///	This call defines how characters for names, strings will be serializaed and how
		///	they are expected to be serialized. An exception are the Open / Import / Save calls,
		///	these calls have a fixed way of serialization of path / file names.
		///
		///	If the encoding value is non-zero the following values are possible (if zero encoding is kept as defined)
		///		 32 [default]	encoding ignored
		///		 64				encoding Windows 1250
		///		 65				encoding Windows 1251
		///		 66				encoding Windows 1252
		///		 67				encoding Windows 1253
		///		 68				encoding Windows 1254
		///		 69				encoding Windows 1255
		///		 70				encoding Windows 1256
		///		 71				encoding Windows 1257
		///		 72				encoding Windows 1258
		///		128				encoding ISO8859 1
		///		129				encoding ISO8859 2
		///		130				encoding ISO8859 3
		///		131				encoding ISO8859 4
		///		132				encoding ISO8859 5
		///		133				encoding ISO8859 6
		///		134				encoding ISO8859 7
		///		135				encoding ISO8859 8
		///		136				encoding ISO8859 9
		///		137				encoding ISO8859 10
		///		138				encoding ISO8859 11
		///						encoding ISO8859 12 => does not exist
		///		140				encoding ISO8859 13
		///		141				encoding ISO8859 14
		///		142				encoding ISO8859 15
		///		143				encoding ISO8859 16
		///		160				encoding MACINTOSH CENTRAL EUROPEAN
		///		192				encoding SHIFT JIS X 213
		///
		///	The wcharBitSizeOverride value overrides the OS based size of wchar_t, the following values can be applied:
		///		0			wcharBitSizeOverride is ignored, override is not changed
		///		16			wchar_t interpreted as being 2 bytes wide (size of wchar_t in bits)
		///		32			wchar_t interpreted as being 4 bytes wide (size of wchar_t in bits)
		///		Any other value will reset the override and wchar_t will follow the OS based size of wchar_t
		///	Note: this setting is independent from the model, this call can also be called without a model defined.
		///
		///	The ascii value defines
		///		true [default]	8 bit serializatiom (size of char returned in bits)
		///		false			16/32 bit serialization (depending on the operating system, i.e. sizeof of wchar_t returned in number of bits)
		///	Note: this setting is model-dependent and requires a model present to have any effect.
		///
		///	The return value is the size of a single character in bits, i.e. 1 byte is 8 bits, the value for a wchar_t can be 16 or 32 depending on settings and operating system
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetCharacterSerialization")]
		public static extern Int64 SetCharacterSerialization(Int64 model, Int64 encoding, Int64 wcharBitSizeOverride, byte ascii);

		/// <summary>
		///		GetCharacterSerialization                   (http://rdf.bg/gkdoc/CS64/GetCharacterSerialization.html)
		///
		///	This call retrieves the values as set by 
		///
		///	The returns the size of a single character in bits, i.e. 1 byte is 8 bits, this can be 8, 16 or 32 depending on settings and operating system
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetCharacterSerialization")]
		public static extern Int64 GetCharacterSerialization(Int64 model, out Int64 encoding, out byte ascii);

		/// <summary>
		///		SetModellingStyle                           (http://rdf.bg/gkdoc/CS64/SetModellingStyle.html)
		///
		///	This call sets the modelling style.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "SetModellingStyle")]
		public static extern void SetModellingStyle(Int64 model, Int64 setting, Int64 mask);

		/// <summary>
		///		GetModellingStyle                           (http://rdf.bg/gkdoc/CS64/GetModellingStyle.html)
		///
		///	This call gets the modelling style.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetModellingStyle")]
		public static extern Int64 GetModellingStyle(Int64 model, Int64 mask);

		/// <summary>
		///		AbortModel                                  (http://rdf.bg/gkdoc/CS64/AbortModel.html)
		///
		///	This function abort running processes for a model. It can be used when a task takes more time than
		///	expected / available, or in case the requested results are not relevant anymore.
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "AbortModel")]
		public static extern Int64 AbortModel(Int64 model, Int64 setting);

		/// <summary>
		///		GetSessionMetaInfo                          (http://rdf.bg/gkdoc/CS64/GetSessionMetaInfo.html)
		///
		///	This function is meant for debugging purposes and return statistics during processing.
		///	The return value represents the number of active models within the session (or zero if the model was not recognized).
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetSessionMetaInfo")]
		public static extern Int64 GetSessionMetaInfo(out Int64 allocatedBlocks, out Int64 allocatedBytes, out Int64 nonUsedBlocks, out Int64 nonUsedBytes);

		/// <summary>
		///		GetModelMetaInfo                            (http://rdf.bg/gkdoc/CS64/GetModelMetaInfo.html)
		///
		///	This function is meant for debugging purposes and return statistics during processing.
		///	The return value represents the number of active models within the session (or zero if the model was not recognized).
		/// </summary>
		[DllImport(IFCEngineDLL, EntryPoint = "GetModelMetaInfo")]
		public static extern Int64 GetModelMetaInfo(Int64 model, out Int64 activeClasses, out Int64 removedClasses, out Int64 activeProperties, out Int64 removedProperties, out Int64 activeInstances, out Int64 removedInstances, out Int64 inactiveInstances);

		[DllImport(IFCEngineDLL, EntryPoint = "GetModelMetaInfo")]
		public static extern Int64 GetModelMetaInfo(Int64 model, out Int64 activeClasses, out Int64 removedClasses, out Int64 activeProperties, out Int64 removedProperties, IntPtr activeInstances, IntPtr removedInstances, IntPtr inactiveInstances);

		[DllImport(IFCEngineDLL, EntryPoint = "GetModelMetaInfo")]
		public static extern Int64 GetModelMetaInfo(Int64 model, out Int64 activeClasses, out Int64 removedClasses, IntPtr activeProperties, IntPtr removedProperties, out Int64 activeInstances, out Int64 removedInstances, out Int64 inactiveInstances);

		[DllImport(IFCEngineDLL, EntryPoint = "GetModelMetaInfo")]
		public static extern Int64 GetModelMetaInfo(Int64 model, out Int64 activeClasses, out Int64 removedClasses, IntPtr activeProperties, IntPtr removedProperties, IntPtr activeInstances, IntPtr removedInstances, IntPtr inactiveInstances);

		[DllImport(IFCEngineDLL, EntryPoint = "GetModelMetaInfo")]
		public static extern Int64 GetModelMetaInfo(Int64 model, IntPtr activeClasses, IntPtr removedClasses, out Int64 activeProperties, out Int64 removedProperties, out Int64 activeInstances, out Int64 removedInstances, out Int64 inactiveInstances);
